issue #386 - account and channel bulk edit checkboxes not visible and therefore not useable. Also change wording to remove the offensive 'user' designation.

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -2293,6 +2293,6 @@ nav .badge.mail-update:hover {
     background-color: #337AB7;
 }
 
-.channels_ckbx, .pending_ckbx, .users_ckbx {
+/*.channels_ckbx, .pending_ckbx, .users_ckbx {
 	margin-top: -5px !important;
-}
+}*/
